# snazel

./: hello.py  pyproject.toml  snazel.py
src/snazel/: __init__.py  __main__.py  api.py  exception.py  overlayfs.py  path.py  rule.py
src/snazel/builder/: __init__.py  build.py
src/snazel/cli/: args.py  snazel.py
